# SummerCQuiz

./: .gitignore  CNAME  Caddyfile  Cargo.toml  DEPLOY_HETZNER.md  Dockerfile  deploy.sh  docker-compose.yml  index.html  q  summer_quiz_bin-2c156f3422fbc5a3.js  summer_quiz_bin-5f7d38e009bbf20.js  summer_quiz_bin-7969a479ac05a5db.js  summer_quiz_bin-8e54c90411d5b6d4.js  summer_quiz_bin-b71f5ae5ef1d7a47.js  summer_quiz_bin-e2e49f13601ae4db.js  summer_quiz_bin-e2e49f13601ae4db_bg.wasm
docs/: web_judges_backend_plan.md
src/: app.rs  code_utils.rs  data.rs  judge_c.rs  judge_java.rs  judge_kt.rs  judge_pseudo.rs  judge_python.rs  judge_rust.rs  judge_utils.rs  lib.rs  main.rs  model.rs  ui.rs  update.rs  view_models.rs
src/app/: actions.rs  completion.rs  mod.rs  navigation.rs  progress.rs  queries.rs  resets.rs  updates.rs  view_models.rs
src/data/: quiz_questions.csv  quiz_questions.yaml  quiz_questions_java.yaml  quiz_questions_kotlin.yaml  quiz_questions_modes.yaml  quiz_questions_modes_validation.md  quiz_questions_python.yaml  quiz_questions_rust.yaml  quiz_questions_v2.yaml
src/judge/: judge_c.rs  judge_java.rs  judge_kt.rs  judge_pseudo.rs  judge_python.rs  judge_remote.rs  judge_rust.rs  judge_utils.rs  mod.rs
src/ui/: helpers.rs  layout.rs  mod.rs
src/ui/views/: language.rs  level_menu.rs  level_summary.rs  level_theory.rs  mod.rs  module_menu.rs  pending.rs  quiz.rs  summary.rs  week_menu.rs  welcome.rs
