[package]
name = "summer_quiz"
version = "0.1.4"
edition = "2024"

[dependencies]
eframe = { version = "0.32.0", features = ["persistence"] }
egui = "0.32.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
wasm-bindgen-futures = "0.4.50"
log = "0.4.27"
web-sys = "0.3.77"
egui_code_editor = { version = "0.2.17" }



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
self_update = "0.42.0"
reqwest = { version = "0.12", features = ["blocking"] }


[lib]
crate-type = ["cdylib", "rlib"]  # <- Añadido para compilar a WASM

[[bin]]
name = "summer_quiz_bin"
path = "src/main.rs"