[package]
name = "summer_quiz"
version = "0.3.1"
edition = "2024"

[dependencies]
eframe = { version = "=0.32.1", features = ["persistence"] }
egui = "=0.32.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
wasm-bindgen-futures = "0.4.50"
log = "0.4.28"
web-sys = { version = "0.3.77", features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }
egui_code_editor = { version = "0.2.17" }
egui_commonmark = "0.21.1"
semver = "1.0.26"
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3.77"



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
self_update = "0.42.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors"] }


[lib]
name = "summer_quiz"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # <- Añadido para compilar a WASM

[[bin]]
name = "summer_quiz_bin"
path = "src/main.rs"
[[bin]]
name = "summer_quiz_judge_server"
path = "src/bin/summer_quiz_judge_server.rs"
